# miscellaneous-hwp-parsing

./: pyproject.toml
data/: template1.hwpx  template_2014.hwpx  template_2015.hwpx  template_2015_2.hwpx  template_2015_3.hwpx  template_2016.hwpx  template_2018.hwpx
notebooks/: 001_.ipynb  001_template.ipynb
